--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,20 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+model_A/*
+!model_A/lora/
+model_A/lora/*
+!model_A/lora/*.ipynb
+!model_A/lora/*.yaml
+
+model_B/*
+
+SW_A/*
+!SW_A/lora/
+SW_A/lora/*
+!SW_A/lora/*.ipynb
+!SW_A/lora/*.yaml
+
+SW_B/*
